[package]
name = "aozora-pubserver"
version = "0.1.0"
authors = ["Ken Sato <ksato9700@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
log = "0.4.0"
env_logger = "0.7.1"
mongodb = "0.9.0"
bson = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
